fixs mentor remarks #11